@@ -125,12 +125,18 @@ Supported Options:
   - all.hdd
   - hdd.read-speed
   - all.hdd.read-speed
+  - hdd.read-speed.sda
+  - hdd.read-speed.sdb
   - hdd.read-speed.nvme0n1
   - hdd.temp
   - all.hdd.temp
+  - hdd.temp.sda
+  - hdd.temp.sdb
   - hdd.temp.nvme0n1
   - hdd.write-speed
   - all.hdd.write-speed
+  - hdd.write-speed.sda
+  - hdd.write-speed.sdb
   - hdd.write-speed.nvme0n1
   - all.memory
   - memory.temp
