@@ -1,9 +1,11 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
-Phoronix Test Suite (Git)
+Phoronix Test Suite 10.0.0 Milestone 1
+19 August 2020
 
 pts-core: Add keep-results-in-result-file sub-command
 pts-core: Split the dynamic result viewer into its own embed class for result file handling to allow for easy re-use by OpenBenchmarking, Phoromatic, etc
+pts-core: Various changes for supporting the new OpenBenchmarking.org infrastructure
 pts_Graph: Add histogram type
 phodevi: CPU core name / family detection to friendly strings (OpenBenchmarking.org driven)
 phodevi: Report core name via system-info command
